fix first image ovelapping on narrow screen

--- a/_woocommerce.scss
+++ b/_woocommerce.scss
@@ -131,6 +131,10 @@
       width: 100%;
       margin-bottom: 4em;
     }
+    div.product.fdd.first {
+      width: auto !important;
+      text-align: left !important;
+    }
   }
 }
 
